# music_player

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/firmware/: devcontainer.json
.devcontainer/firmware/online/: DockerFile
.devcontainer/unit_tests/: Dockerfile  devcontainer.json
.github/workflows/: build_docker_container.yml  build_stm32_firmware.yml  clang_format.yml  clang_tidy.yml  code_coverage_report.yml  run_unit_tests.yml
cmake/: target_stm32.cmake  target_stm32h7.cmake  target_stm32h7a3xx.cmake  toolchain_gnu_arm.cmake  toolchain_linux_gcc.cmake  toolchain_linux_gcc_coverage.cmake
docs/: Music_Player.drawio
firmware/: firmware.cmake  unittests.cmake
firmware/music_player/: CMakeLists.txt
firmware/music_player/application/: CMakeLists.txt  app.cpp  app.h  char_input.cpp  char_input.h  char_output.cpp  char_output.h  i_char_input.h  i_char_output.h  i_song_player.h  main_run.cpp  main_run.h  setup_thread_tasks.cpp  setup_thread_tasks.h  song_player.cpp  song_player.h
firmware/music_player/application/command_line_interface/: command_line_interface.cpp  command_line_interface.h  commands.cpp  commands.h  defines.h  i_command.h  i_command_line_interface.h  i_commands.h  run_command_result.h
firmware/music_player/application/command_line_interface/commands/: echo.cpp  echo.h  pause.cpp  pause.h  play.cpp  play.h
firmware/music_player/application/led/: i_led_service.h  led_service.cpp  led_service.h
firmware/music_player/application/read_music/: defines.h  i_read_music.h  i_samples_queue.h  read_wave.cpp  read_wave.h  samples_queue.cpp  samples_queue.h
firmware/music_player/application/waveforms/: darkstar.cpp  waves.h
firmware/music_player/driver_interfaces/: CMakeLists.txt  i_char_output_driver.h  i_song_driver.h
firmware/music_player/driver_interfaces/file/: defines.h  i_secure_digital_driver.h
firmware/music_player/driver_interfaces/led/: i_led_driver.h
firmware/music_player/drivers/nucleoh7a3zit6q/: CMakeLists.txt  hal_callbacks.h  hal_handles.h
firmware/music_player/drivers/nucleoh7a3zit6q/led/: led_one_driver.cpp  led_one_driver.h  led_two_driver.cpp  led_two_driver.h
firmware/music_player/drivers/nucleoh7a3zit6q/pwm/: pwm_driver.cpp  pwm_driver.h
firmware/music_player/drivers/nucleoh7a3zit6q/uart/: uart_driver.cpp  uart_driver.h
firmware/music_player/thread_interfaces/: CMakeLists.txt  i_thread_utils.h
firmware/music_player/thread_interfaces/file/: defines.h  i_secure_digital_storage.h
firmware/music_player/thread_interfaces/queue/: defines.h  i_char_queue.h  i_uint8_queue.h
firmware/music_player/thread_interfaces/thread_create/: i_thread_create.h
firmware/music_player/threads/: CMakeLists.txt
firmware/music_player/threads/thread_x/: CMakeLists.txt  thread_utils.cpp  thread_utils.h
firmware/music_player/threads/thread_x/file/: secure_digital_storage.cpp  secure_digital_storage.h
firmware/music_player/threads/thread_x/queue/: char_queue.cpp  char_queue.h  uint8_queue.cpp  uint8_queue.h
firmware/music_player/threads/thread_x/thread_create/: thread_create.cpp  thread_create.h
firmware/targets/: CMakeLists.txt
firmware/targets/nucleoh7a3ziq/: CMakeLists.txt  main.cpp
firmware/targets/nucleoh7a3ziq/device/: startup_stm32h7a3zitxq.s
firmware/targets/nucleoh7a3ziq/device/cmsis/: CMakeLists.txt
firmware/targets/nucleoh7a3ziq_old/: CMakeLists.txt  main.cpp
firmware/targets/nucleoh7a3ziq_old/device/stm32_hal/: CMakeLists.txt  stm32h7xx_hal_conf.h
firmware/targets/nucleoh7a3zit6q/: .mxproject  CMakeLists.txt  STM32H7A3XX_FLASH.ld  nucleoh7a3zit6q.ioc
firmware/targets/nucleoh7a3zit6q/AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
firmware/targets/nucleoh7a3zit6q/Core/Inc/: RTE_Components.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
firmware/targets/nucleoh7a3zit6q/Core/Src/: app_threadx.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tx_initialize_low_level.S
firmware/targets/nucleoh7a3zit6q/FileX/App/: app_filex.c
firmware/targets/nucleoh7a3zit6q/cmake/stm32cubemx/: CMakeLists.txt
firmware/targets/rev1/: rev1.ioc
firmware/tests/: .clang-tidy  CMakeLists.txt
firmware/tests/application/: CMakeLists.txt  tests_char_input.cpp  tests_char_output.cpp  tests_command_line_interface.cpp  tests_commands.cpp  tests_led_service.cpp  tests_read_wave.cpp  tests_song_player.cpp
firmware/tests/application/commands/: tests_command_pause.cpp  tests_command_play.cpp
firmware/tests/drivers/nucleoh7a3zit6q/: CMakeLists.txt  tests_led_one_driver.cpp  tests_led_two_driver.cpp
firmware/tests/mocks/: CMakeLists.txt  mock_song_player.h
firmware/tests/mocks/command_line_interface/: mock_command.h  mock_commands.h
firmware/tests/mocks/device/: .clang-tidy  CMakeLists.txt
firmware/tests/mocks/device/cmsis/: CMakeLists.txt  mock_cmsis.cpp  mock_cmsis.h  stm32h7xx.h
firmware/tests/mocks/device/hal/: CMakeLists.txt  mock_hal.cpp  mock_hal.h  stm32h7xx_hal.h
firmware/tests/mocks/device/targets/stm32h7xx/: CMakeLists.txt  core_cm7.h  stm32h7a3xx_gpio.cpp  stm32h7a3xx_gpio.h  stm32h7a3xxq_st.h  stm32h7xx_hal.h  stm32h7xx_hal_def.h  stm32h7xx_hal_gpio.h  stm32h7xx_hal_other.h  stm32h7xx_hal_tim.h  stm32h7xx_hal_tim_ex.h  stm32h7xx_hal_uart.h  system_stm32h7xx.h
firmware/tests/mocks/drivers/: mock_char_output_driver.h  mock_pwm_driver.h
firmware/tests/mocks/led/: mock_led_driver.h
firmware/tests/mocks/read_music/: mock_read_music.h  mock_samples_queue.h
firmware/tests/mocks/threads/: mock_char_queue.h
firmware/tests/mocks/threads/file/: mock_secure_digital_storage.h
firmware/tests/mocks/threads/stubs/: CMakeLists.txt  fx_api.h  thread_utils.h
firmware/tests/mocks/threads/stubs/file/: secure_digital_storage.h
firmware/tests/mocks/threads/stubs/queue/: char_queue.h  uint8_queue.h
firmware/tests/mocks/threads/stubs/thread_create/: thread_create.h
scripts/: build_and_run_unit_tests.sh  build_stm32h7_firmware.sh  clang_format_check.sh  clang_tidy_check.sh  generate_coverage_report.sh
